# mc-scan

./: README.md  pyproject.toml
.github/workflows/: codeql.yml  ossar.yml
modules/: minecraft.py
modules/minecraft/: __init__.py  constants.py  status.py
