[tool.poetry]
name = "mc-scan"
version = "0.1.0"
description = "Scan for Minecraft servers all over the world."
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
mcstatus = "^10.0.1"
dramatiq = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
